# SpecEngine

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.spec-engine/: config.json
spec/: SPEC_ENGINE_INSTRUCTIONS.md  SPEC_ENGINE_PLAN.md
src/spec_engine/: __init__.py  cli.py  config_store.py  engine.py  models.py  observability.py  parser.py  providers.py  quality.py  renderer.py
tests/: test_cli.py  test_cli_generation_path.py  test_config_store.py  test_engine.py  test_llm_spec_generation.py  test_observability.py  test_providers.py  test_quality.py  test_renderer.py
